--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jspdf-autotable": "^3.5.23",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hot-toast": "^2.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
     "socket.io-client": "^3.1.1",
